--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
+calendar
+calendarN
 # Dependency directories (remove the comment below to include it)
 # vendor/
+.idea
