--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,8 @@ jobs:
 
     - name: Test
       run: make test
+
+    - name: Run coverage
+        run: ./test.sh
+    - name: Upload coverage to Codecov
+      run: bash <(curl -s https://codecov.io/bash)
