[Fix] Check cron (#38)
* tech: update run

* fix: update create tweet

--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -23,4 +23,4 @@ jobs:
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
-        run: cd compose && go run .
+        run: make create-tweet
