--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,16 @@
 sonar.projectKey=samit22_calendarN
 sonar.organization=samit22
-sonar.exclusions=**/*_test.go
+
+# Source configuration
+sonar.sources=.
+sonar.exclusions=**/*_test.go,**/vendor/**,**/*.md,**/testdata/**
+
+# Test configuration
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
+
+# Coverage
 sonar.go.coverage.reportPaths=coverage/coverage.out
+
+# Encoding
+sonar.sourceEncoding=UTF-8
