--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 
     - uses: actions/setup-go@v5
       with:
-        go-version: '1.21'
+        go-version-file: 'go.mod'
 
     - name: Build
       run: go build -v ./...
@@ -32,7 +32,7 @@ jobs:
     - name: Test with coverage
       run: |
         mkdir -p coverage
-        go test ./... -coverprofile=coverage/coverage.out -covermode=atomic
+        go test -race -coverprofile=coverage/coverage.out -covermode=atomic ./...
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
