--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,11 +3,12 @@ sonar.organization=samit22
 
 # Source configuration
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**,**/*.md,**/testdata/**
+sonar.exclusions=**/*_test.go,**/vendor/**,**/*.md,**/testdata/**,**/*.rb
 
 # Test configuration
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
+sonar.test.exclusions=**/*.rb
 
 # Coverage
 sonar.go.coverage.reportPaths=coverage/coverage.out
